--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "test": "mocha-webpack --webpack-config webpack.config.js --require test/setup.js test/*test.js"
   },
   "dependencies": {
     "vue": "^2.5.11"
@@ -22,12 +23,17 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
+    "chai": "^4.1.2",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "expect": "^23.6.0",
     "file-loader": "^1.1.4",
+    "mocha": "^5.2.0",
+    "mocha-webpack": "^1.1.0",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^2.9.1",
+    "webpack-node-externals": "^1.7.2"
   }
 }
