--- a/package.json
+++ b/package.json
@@ -19,21 +19,18 @@
     "not ie <= 8"
   ],
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-stage-3": "^6.24.1",
     "chai": "^4.1.2",
-    "cross-env": "^5.0.5",
-    "css-loader": "^0.28.7",
-    "expect": "^23.6.0",
-    "file-loader": "^1.1.4",
-    "mocha": "^5.2.0",
+    "cross-env": "^7.0.1",
+    "css-loader": "^3.4.2",
+    "expect": "^25.1.0",
+    "file-loader": "^5.1.0",
+    "mocha": "^7.1.0",
     "mocha-webpack": "^1.1.0",
-    "vue-loader": "^13.0.5",
+    "vue-loader": "^15.9.0",
     "vue-template-compiler": "^2.4.4",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.9.1",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-node-externals": "^1.7.2"
   }
 }
