--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "mocha-webpack --webpack-config webpack.config.js --require test/setup.js test/*test.js"
   },
   "dependencies": {
+    "typescript": "^3.8.3",
     "vue": "^2.5.11"
   },
   "browserslist": [
